<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
    android:padding="@dimen/row_padding">

    <TextView
        android:id="@+id/tv_asset_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/header_asset"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:maxLines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/header_desc"
        android:layout_weight="2.5"
        android:layout_gravity="center"
        android:gravity="center"
        android:maxLines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/tv_asset_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/header_assset_code"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/header_location"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:maxLines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/tv_location_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/header_location_code"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/tv_usage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/header_usage"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:maxLines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/header_type"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:maxLines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/tv_parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/header_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:maxLines="1"
        android:ellipsize="end"/>

</LinearLayout>